Fix: tap highlight on mobile, Close #108

--- a/src/components/Toggle/Toggle.module.scss
+++ b/src/components/Toggle/Toggle.module.scss
@@ -1,6 +1,13 @@
 @import '../../variables';
 
 .toggle {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: transparent;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
   .checkbox {
     height: 0;
     width: 0;
